dark mode bug fixed. New classic themes added

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,3 @@
-:root {
-  --darkcolor: #abea94;
-  --midcolor: #758073;
-  --lightcolor: #050706;
-}
-
 body {
   font-family: Arial, sans-serif;
   margin: 0;
